# kronos

./: .gitignore  BUGS.md  CONTRIBUTING.md  Cargo.toml  HISTORY.md  README.md  TODO.md  config.toml  flake.nix  known-issues.md
.github/workflows/: main.yml  rust.yml
src/: app.rs  bye.rs  components.rs  config.rs  constants.rs  cue.rs  file_browser.rs  files.rs  helpers.rs  lib.rs  main.rs  mpris.rs  player.rs  quit_future.rs  sample.rs  source.rs  state.rs  structs.rs  tabs.rs  term.rs  toml.rs  ui.rs
src/components/: file_browser.rs  library.rs
src/components/file_browser/: file_browser.rs  file_browser_selection.rs  keyboard_handler.rs  widget.rs
src/cue/: Tim Buckley - Happy Sad.cue  cue_line.rs  cue_line_node.rs  cue_sheet.rs  cue_sheet_item.rs
src/extensions/: string.rs
src/files/: library.rs
src/helpers/: gen_funcs.rs  music_handler.rs  queue.rs  song.rs  stateful_list.rs  stateful_table.rs  str_extras.rs
src/lib/: app.rs  gen_funcs.rs  mod.rs  music.rs  music_handler.rs  queue.rs  stateful_list.rs  stateful_table.rs
src/structs/: playlist.rs  queue.rs  song.rs
src/toml/: read_toml_file.rs
src/ui/: currently_playing.rs  file_browser.rs  help_tab.rs  instructions_tab.rs  keyboard_handler.rs  library.rs  music_tab.rs  playlist.rs  render_ui.rs  stateful_table.rs  top_bar.rs  ui.rs
