[package]
name = "kronos"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = {  version = "0.28.1", features = ["event-stream"] }
glob = "0.3.1"
rodio = { version = "0.19.0", features = ["symphonia-all"]}
lofty = "0.18.2"
toml = "0.7.2"
serde = {version = "1.0.152", features = ["derive"]}
home = "0.5.4"
ratatui = "0.27.0"
mpris-server = "0.8.1"
async-std = {version = "1.12.0", features = ["attributes", "unstable"]}
