[package]
name = "jolteon"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'

[dependencies]
crossterm = {  version = "0.28.1", features = ["event-stream"] }
glob = "0.3.1"
rodio = { version = "0.19.0", features = ["symphonia-all"]}
lofty = "0.18.2"
toml = "0.7.2"
serde = {version = "1.0.152", features = ["derive"]}
home = "0.5.4"
ratatui = { version = "0.27.0", features = ["serde"] }
mpris-server = "0.8.1"
async-std = {version = "1.12.0", features = ["attributes", "unstable"]}
futures = "0.3.30"
flexi_logger = { version = "0.29", default-features = false }
log = "0.4"
