cargo-features = ["profile-rustflags"]

[package]
name = "jolteon"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = 'abort'
rustflags = ["-Z", "threads=8"]

[profile.release]
panic = 'abort'
strip = "debuginfo"
lto = true
codegen-units = 1
rustflags = ["-C", "target-cpu=native"]

[dependencies]
crossterm = {  version = "0.28.1", features = ["event-stream"] }
glob = "0.3.1"
rodio = { version = "0.19.0", features = ["symphonia-all"]}
lofty = "0.18.2"
toml = "0.7.2"
serde = {version = "1.0.152", features = ["derive"]}
home = "0.5.4"
ratatui = { version = "0.27.0", features = ["serde", "unstable-widget-ref"] }
mpris-server = "0.8.1"
async-std = {version = "1.12.0", features = ["attributes", "unstable"]}
futures = "0.3.30"
flexi_logger = { version = "0.29" }
log = "0.4"
chrono = "0.4.38"
colored = "2.1.0"
serde-inline-default = "0.2.1"
serde_default = "0.2.0"

[patch.crates-io]
cpal = { git = 'https://github.com/lautarodragan/cpal' }
